# MicroManus

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: admin.py  agent.py  auth.py  billing.py  config.py  crypto.py  llm_settings.py  main.py  models.py  pricing.py  schemas.py  stats.py  threads.py
backend/tests/: conftest.py  test_agent.py  test_billing.py  test_pricing.py  test_threads.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  Layout.jsx  alert.js  api.js  i18n.js  index.css
frontend/src/pages/: Admin.jsx  AuthCallback.jsx  Chat.jsx  Login.jsx  Paywall.jsx  Settings.jsx  Stats.jsx
