[project]
name = "micromanus-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "deploy>=1.9.1",
    "fastapi[standard]>=0.139.2",
    "fastapi-cli>=0.0.32",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "stripe>=15.3.1",
    "uvicorn[standard]>=0.51.0",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
